--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
     "test": "test"
   },
   "author": "Mykola Kushnir",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "prettier": "^3.2.5"
+  }
 }
