--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "mtrpz-lab-1",
   "version": "1.0.0",
   "description": "Laboratory work 1 on the discipline \"Methodologies and technologies of software development\"",
-  "main": "app.js",
+  "main": "lib/app.js",
+  "type": "module",
   "scripts": {
     "test": "test",
     "lint": "eslint . && prettier -c \"**/*.js\" \"**/*.json\" \"**/*.md\"",
