--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "lib/app.js",
   "type": "module",
   "scripts": {
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "lint": "eslint . && prettier -c \"**/*.js\" \"**/*.json\" \"**/*.md\"",
     "fmt": "prettier -w \"**/*.js\" \"**/*.json\" \"**/*.md\""
   },
   "author": "Mykola Kushnir",
   "license": "MIT",
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
+    "jest": "^29.7.0",
     "prettier": "^3.2.5"
   }
 }
