--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.12.0
-      - name: 'Install dependencies'
-        run: npm install
+      - name: 'Install necessary Jest packages'
+        run: npm install jest @jest/globals
       - name: 'Run Jest'
         run: npm run test
